Fix mobile hz scrollbars CSS bug.

--- a/client/app-slim/forum/forum.styl
+++ b/client/app-slim/forum/forum.styl
@@ -806,6 +806,8 @@ $row2PaddingBottom = 7px;
     right: -1px;
 
 .esF_TsL_T
+  .dw-p-excerpt
+    overflow: hidden; // otherwise a long URL can cause horizontal scrollbars
   .dw-p-excerpt,
   .s_F_Ts_T_Con_B
     display: block;
